[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "My solutions of Advent Of Code in Python"
authors = ["Jeroen Van Goey"]

[tool.poetry.dependencies]
python = "^3.10"
nox = "^2021.10.1"
nox-poetry = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["2019", "2020", "2021", "noxfile.py"]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to this repository
  | 2017
  | 2018
)/
'''
