[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "My solutions of Advent Of Code in Python"
authors = ["Jeroen Van Goey"]

[tool.poetry.dependencies]
python = "^3.10"
nox = "^2021.10.1"
nox-poetry = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-bugbear = "^21.11.29"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
src_paths = ["2017", "2018", "2019", "2020", "2021", "noxfile.py"]

[tool.black]
target_version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to this repository
  | 2017
  | 2018
)/
'''

[tool.mypy]
python_version = '3.10'

# Per module options

[tool.mypy-2017]
ignore_errors = true

[tool.mypy-2018]
ignore_errors = true
