[project]
name = "adventofcode"
version = "0.0.1"
authors = [
  { name="Jeroen Van Goey", email="jeroen.vangoey@gmail.com" },
]
description = "My solutions to Advent of Code"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/BioGeek/adventofcode"

[build-system]
requires = ["setuptools>=65.6.3"]
build-backend = "setuptools.build_meta"


[tool.isort]
profile = "black"
src_paths = ["2017", "2018", "2019", "2020", "2021", "noxfile.py"]

[tool.black]
target_version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to this repository
  | 2017
  | 2018
)/
'''

[tool.mypy]
python_version = '3.10'
